--- a/angular20-kendo20/src/app/app.html
+++ b/angular20-kendo20/src/app/app.html
@@ -49,6 +49,8 @@
       <app-window-form></app-window-form>
     </kendo-window>
   }
+
+  <app-grid-example></app-grid-example>
 </div>
 
 <ng-template kendoDialogContainer></ng-template>
