--- a/angular16-kendo12/src/app/app.component.html
+++ b/angular16-kendo12/src/app/app.component.html
@@ -53,6 +53,8 @@
     </kendo-window-titlebar>
     <app-window-form></app-window-form>
   </kendo-window>
+
+  <app-grid-example></app-grid-example>
 </div>
 
 <ng-template kendoDialogContainer></ng-template>
